@@ -59,6 +59,8 @@ they occurred between. For more detailed information see the
 @item Use gnome-www-browser for displaying GNOME-Homepage instead of gnome-moz-remote [Christopher Bratusek]
 
 @item Make strings in sawfish-ui fully translatable [Alexey I. Froloff]
+
+@item Added get-window-by-class and get-window-by-class-re [Christopher Bratusek]
 @end itemize
 @item Widget Transistion:
 @itemize @minus
