@@ -1,3 +1,10 @@
+2009-08-27  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/windows.jl: get-window-by-class/get-window-by-class-re [Christopher Bratusek]
+
+	* lisp/sawfish/wm/viewports.jl: improved dynamic viewport-boundary-mode [Jeremy Hankins]
+
+	* man/sawfish.texi: doc for above changes
+
 2009-08-09  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/ext/match-window.jl: move rename-window here, as it requires prompt but this either does not 
 	                                       load properly in windows.jl or breaks sawfish-ui if require'ed instead of open'ed
